--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,16 +20,15 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-pro-sidebar": "^1.1.0",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
-    "redux": "^5.0.1",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.3",
     "tw-animate-css": "^1.2.5",
@@ -43,7 +42,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
-    "daisyui": "^5.0.17",
+    "daisyui": "^5.0.27",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
